--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,400;0,600;0,700;1,400&display=swap");
 *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+}
+body {
+    scroll-behavior: smooth;
+    font-family: "ABeeZee", sans-serif;
+  }
+  header {
+    position: sticky;
+    top: 0px;
+    background-color: white;
+    z-index: 3;
 }
 /* Navbar container */
 .navbar {
@@ -10,6 +22,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 100
     /* padding: 10px 20px; */
 }
 .logo{
@@ -32,6 +45,9 @@
     font-weight: 400;
    
   
+}
+.menu-button {
+    display: none;
 }
 /* Annoncement */
 .announcent{
@@ -63,9 +79,14 @@
     margin-left: 5%;
     margin-bottom: 0%;
 }
-/* .hero-main-sec1{
-    margin-top: 5%;
-} */
+
+.hero-main-sec1 h1 {
+    color: #2b2f34;
+    font-size: 3.5rem;
+    font-style: italic;
+    font-weight: 400;
+    letter-spacing: -0.75px;
+}
 
 .hero-left{
     padding-left: 20px;
@@ -77,7 +98,8 @@
     justify-content: flex-start;
     align-items: flex-end;
     gap: 20px; 
-    display: inline-flex
+    display: inline-flex;
+    position: relative;
 }
 .hero-left-txt-1{
      flex-direction: column; 
@@ -94,9 +116,7 @@
     padding: 40px 0px 30px 40px;
     margin-top: 5%; 
     background: white; 
-    /* box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.08); */
     border-radius: 8px; 
-    /* border: 1px #E2E2E2 solid;  */
     width: 40%;
     box-shadow: inset 0 0 40px 15px white, inset 0 0 15px 5px white;
     background: linear-gradient(to bottom right, rgb(247 154 244 / 35%), rgb(4 139 134 / 18%));
@@ -129,14 +149,16 @@
 .input-field-right:focus{
     outline:none;
 }
-#hero-btn{
-    background-image:linear-gradient(280deg, #992FED 0%, #2F80ED 100%);
-    color:white;
-    border-radius: 8px;
+.form-button {
+    color: #fff;
     font-size: 18px;
-    font-style: italic;
-    width: 22vw;
-    height: 5vh;
+    font-weight: 700;
+    line-height: 150%;
+    padding: 14px 0px;
+    width: 100%;
+    border: none;
+    border-radius: 8px;
+    background: var(--New, linear-gradient(277deg, #992fed 0%, #2f80ed 100%));
 }
 /* Courses offered section and cards */
 .course-sec{
@@ -145,6 +167,7 @@
     padding-top:20px 
 
 }
+
 .beginner-intermidiate-cards{
     display:flex;
     justify-content: center;
@@ -160,14 +183,7 @@
     border: 1px #E2E2E2 solid; 
     
 }
-/* table, caption, tbody, tfoot, thead, th, tr {
-    margin: 0;
-    padding: 0;
-    border: none;
-    outline: 0;
-    vertical-align: baseline;
-    background: transparent;
-} */
+
 table{
     width: 90%;
 }
@@ -187,15 +203,15 @@ td{
     border-radius: 8px;
 }
 /* courses offer setion */
-#course-btn{
-    background-color: blue;
-    color:white;
-    border-radius: 8px;
+.report-btn {
+    color: #fff;
     font-size: 18px;
     font-style: italic;
+    font-weight: 400;
+    line-height: 150%;
+    text-align: center;
     width: 20vw;
     height: 8vh;
-    border: none;
 }
 
 .card-main{
@@ -216,62 +232,33 @@ td{
 
 
 
-@media screen and (max-width:480px){
-    .nav-img-1{
-        width: 110px;
+@media screen and (max-width: 480px) {
+    .card-2,
+    .hero-left-main,
+    .hero-right,
+    .hero-left {
+      width: 98% !important;
+      margin: auto !important;
     }
-    .nav-img-2{
-        width: 65px;
+  
+    .course-sec,
+    .hero-left-right-main {
+      flex-direction: column !important;
     }
-    #hero-img>img{
-        margin-bottom: 30px;
+    
+  }
+  @media screen and (max-width: 825px) {
+    .hide-on-mobile {
+      display: none !important;
     }
-    .arrow{
-        display: none;
+    .menu-button {
+      display: block !important;
     }
-    .card-0{
-        margin-top: 20px;
+    .hero-main-sec1 {
+      text-align: center !important;
     }
-    .card-0>button{
-        width: 200px;
-    }
-    .card-0-name{
-        width: 180px;
-    }
-    .card-0-number{
-        width: 180px;
-    }
-    #Beginner{
-        display: none;
-    }
-    #Intermidiate{
-        display: none;
-    }
-    .card-1{
-        width: fit-content;
-        height: fit-content;
-        margin-bottom: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    #beg-btn{
-        display: flex;
-        margin-top: 10px;
-        margin-bottom: 20px;
-        flex-direction: column;
-        justify-content: center;
-    }
-    #int-btn{
-        display: flex;
-        margin-top: 10px;
-        margin-bottom: 20px;
-        flex-direction: column;
-        justify-content: center;
-    }
-    #scroll-container{
-        display: none;
-    }
-
-
-}
+  }
+  .menu-button:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+  }
